Bug 250847 - missing button for terminal emulator in dolphin's toolbar
Summary: missing button for terminal emulator in dolphin's toolbar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-11 09:03 UTC by Janet
Modified: 2010-12-19 16:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-09-11 09:03:56 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

I updated two systems from KDE SC 4.4.5 to 4.5.1, one Kubuntu Lucid, one Debian sid. In both I had a button for the terminal emulator in dolphin's toolbar before the update, because it is one of my most used tools. Sind 4.5.1 the button is gone. And it also isn't in the configuration for the toolbar anymore. Luckily F4 still works but I prefer the button because I mostly use copy & paste and don't want to take the hand of the mouse to open the terminal. The only button left is the button to open an extra terminal but that's not a good solution on small screens and I prefer to have the terminal right where the action is so that it is in sync with the filemanager.

Reproducible: Always

Steps to Reproduce:
Update to 4.5.1


Expected Results:  
To have the button for the terminal emulator in the toolbar configuration to add it to the toolbar.

OS: Linux (i686) release 2.6.35-4.towo.3-frickel-686
Compiler: cc
Comment 1 FiNeX 2010-09-12 15:11:02 UTC
Confirmed: the button disappeared in KDE 4.5.1
Comment 2 Tanja Schulte 2010-10-24 15:22:21 UTC
For the same reason dolphin should have a go button for the address bar it needs the button for the terminal emulator: to not be forced to take the hand off the mouse during a workflow action. I mainly don't use the terminal emulator for typing, just for copy & paste actions. So it's nonsense for me to use the keyboard to open (and close) the terminal emulator. Please re-add the button. BTW konqueror still has it, but I want to use dolphin as default file manager. Alas it's not possible to drag menu entries to the toolbar... I hope the removal is just accidental and the button will be re-added in the next version. Or is there a workaround to make it visible again?
Comment 3 Peter Paulsen 2010-12-03 23:02:43 UTC
The terminal emulator button is there only in konqueror webbrowser. Not in konqueror filemanager anymore too. It somehow accidentally got lost in the dolphin module on the way from 4.4 to 4.5?
Comment 4 Janet 2010-12-18 15:52:29 UTC
Will it be back in KDE SC 4.6? I cannot believe it was intentionally dumped. Is there a way as user to somehow create an own button for it?
Comment 5 Peter Penz 2010-12-19 13:49:08 UTC
SVN commit 1207728 by ppenz:

Fix regression introduced in 4.5 and allow to add the menu actions "Show Information Panel", "Show Folders Panel", "Show Terminal Panel", "Show Places Panel" and "Show Places Panel" to the toolbar like in KDE SC 4.4.

BUG: 250847
FIXED-IN: 4.6.0


 M  +13 -0     dolphinmainwindow.cpp  
 M  +9 -0      dolphinmainwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207728
Comment 6 Janet 2010-12-19 16:11:12 UTC
Thank you :)