Fix regression introduced in 4.5 and allow to add the menu actions "Show Information Panel", "Show Folders Panel", "Show Terminal Panel", "Show Places Panel" and "Show Places Panel" to the toolbar like in KDE SC 4.4.

BUG: 250847
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1207728